# rust-cpp-wasm

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  prepare-sodium.sh
cpp/: my_code.cpp
cpp/crypto/: hashing.cpp  hashing.h
cpp/proto/: txn.pb.cc  txn.pb.h
cpp/utils/: base58.cpp  base58.h
src/: lib.rs
